--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- Link to CSS StyleSheet -->
-    <link rel="stylesheet" type="text/css" href="fixed.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
   <!-- Start of Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -27,8 +27,6 @@
         <li class="nav-item">
          <a class="nav-link" href="comparisons.html">Comparisons</a>
         </li>
-       <li class="nav-item">
-          <a class="nav-link" href="datapage.html">Data</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
