updated file names

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="row">
       <div class="col-md-6">
         <div>
-        <img width = 200 src ="Fig1.png" ALIGN = "left">
+        <img width = 200 src ="image1.png" ALIGN = "left">
 
         <p>This project was conducted to analyze geographic locations (latitudes) against 
           various weather characteristics including temperature, humidity, cloudiness and 
