--- a/page2.html
+++ b/page2.html
@@ -62,7 +62,7 @@
         <div>
 
 
-        <img width = 100 src ="Fig1.png" ALIGN = "left">
+        <img width = 100 src ="image1.png" ALIGN = "left">
 
         <p>This graph displays the relationship between latitude and the maximum temperatures recorded on a day in 2017.  
           Latitude coordinates run parallel with the equator and measure a city’s relative position north or south on 
