--- a/page3.html
+++ b/page3.html
@@ -62,7 +62,7 @@
         <div>
 
 
-        <img width = 100 src ="Fig2.png" ALIGN = "left">
+        <img width = 100 src ="image2.png" ALIGN = "left">
 
         <p>Here we have a comparison between city latitude and humidity percentage.  
           We’re not seeing a strong correlation between latitude and humidity.  If 
