--- a/page5.html
+++ b/page5.html
@@ -62,7 +62,7 @@
         <div>
 
 
-        <img width = 100 src ="Fig4.png" ALIGN = "left">
+        <img width = 100 src ="image4.png" ALIGN = "left">
 
         <p> The final scatter plot reveals the relationship between latitude 
           and wind speed.  Again, we’re not seeing a strong positive or negative 
