--- a/page4.html
+++ b/page4.html
@@ -60,7 +60,7 @@
       <div class="col-md-6">
         <h1>City Latitude vs. Cloudiness</h1>
         <div>
-        <img width = 100 src ="Fig3.png" ALIGN = "left">
+        <img width = 100 src ="image3.png" ALIGN = "left">
 
         <p>In this graph, city latitudes and their respective cloudiness percentage were 
           measured.  Here we do not see a strong positive or negative relationship between
